--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,6 +1,7 @@
 .header.scrolled_nav {
   height: 80px;
   top: 0;
+  background: white;
 }
 .header.scrolled_nav .main-nav .nav .nav-item a {
   color: #666666;
