--- a/app/views/application/show.html.erb
+++ b/app/views/application/show.html.erb
@@ -1,3 +1,10 @@
+<style type="text/css">
+.course_html {
+  background: white;
+}
+</style>
+
+
 <div class="row row-offcanvas row-offcanvas-left">
   <!-- sidebar -->
   <div class="col-lg-2 visible-lg">
