--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -6,9 +6,9 @@
 
   <% @lessons.each do |chapter| %>
     
-    <div class = "col-xs-12 col-md-4">
+    <div class = "col-xs-12 col-md-4 course_box">
 
-      <h4 class = "underlined-header"><%= chapter[0] %></h4>
+      <h3 class = "underlined-header"><%= chapter[0] %></h3>
       <ul class = "unindented_ul">
 
       <% chapter[1].each do |lesson| %>
