--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -1,14 +1,51 @@
 <div class="row">
-	<div class="col-xs-12 col-md-6 col-md-offset-6">
-		<div class="devise_box">
-			<%= image_tag current_user.avatar, class: 'prof_pic_sm' %>
-			<h3>You have <%= pluralize(@cards.count, 'card') %> to review today - <%= link_to 'Study Flashcards', study_path %></h3>
-			<blockquote>
-				<%= Quote::ARRAY.sample[0] %>
-				<small><%= Quote::ARRAY.sample[1] %></small>
-			</blockquote>
+
+	<div class="row">
+		<div class="col-xs-12 col-md-6">
+
+			<div class="panel">
+				<div class="panel-heading-stats">
+					<h3>Your Stats</h3>
+				</div>
+				<div class="panel-body">
+					<h5 class="pull-right">View your <%= link_to 'Activity Log', activity_log_path %></h5>
+					
+					<h4><strong>Today</strong></h4>
+					<ul class="unindented_ul">
+						<li><small><i class="fa fa-check" aria-hidden="true"></i> <%= @lessons.where("created_at >= ?", Time.zone.now.beginning_of_day).count %></small> Lessons Completed</li>
+						<li><small><i class="fa fa-pencil" aria-hidden="true"></i> <%= @flashcards.where("created_at >= ?", Time.zone.now.beginning_of_day).count %></small> Flashcards Completed</li>
+					</ul>
+					<h4><strong>This Week</strong></h4>
+					<ul class="unindented_ul">
+						<li><small><i class="fa fa-check" aria-hidden="true"></i> <%= @lessons.where("created_at >= ?", 1.week.ago).count %></small> Lessons Completed</li>
+						<li><small><i class="fa fa-pencil" aria-hidden="true"></i> <%= @flashcards.where("created_at >= ?", 1.week.ago).count %></small> Flashcards Completed</li>
+					</ul>
+					
+				</div><!-- panel-heading-stats -->
+			</div><!-- panel -->
+
+			<% if @last_lesson %>
+				<div class="panel">
+					<div class="panel-body text-center">
+							<h3><%= link_to '<i class="fa fa-graduation-cap" aria-hidden="true"></i> Go to recently completed lesson'.html_safe, '/' + @last_lesson.parameters[:course_name].underscore + "s/" + @last_lesson.parameters[:lesson_id] %></h3>
+					</div>
+				</div>
+			<% end %>
+
+		</div><!-- col-xs-12 col-md-4 -->
+
+		<div class="col-xs-12 col-md-6">
+			<div class="devise_box">
+				<%= image_tag current_user.avatar, class: 'prof_pic_sm' %>
+				<h3>You have <%= pluralize(@cards.count, 'card') %> to review today - <%= link_to 'Study Flashcards', study_path %></h3>
+				<blockquote>
+					<%= Quote::ARRAY.sample[0] %>
+					<small><%= Quote::ARRAY.sample[1] %></small>
+				</blockquote>
+			</div>
 		</div>
 	</div>
+
 </div>
 
 <div class = "row">
