--- a/app/views/static_pages/preregistration.html.erb
+++ b/app/views/static_pages/preregistration.html.erb
@@ -17,14 +17,14 @@
             <div class="row">
                 <div class="form-box col-md-8 col-sm-12 col-xs-12 col-md-offset-2 col-sm-offset-0 xs-offset-0">     
                     <div class="form-box-inner">
-                        <h2 class="title text-center">Preregister for August 2016 Enrollment</h2>  
-                        <p class="intro text-center">We are currently accepting applications for 20 highly motivated students to join TECHRISE starting August 2016, completely free of charge. Please fill out the form below to sign up for preregistration.</p>     
-                        <!-- <h2 class="title text-center">Preregister for Future Cohorts</h2>
-                        <p class="intro text-center">Thank you for your interest! Unfortunately, we have received many applications in a short period of time and have decided to close it for the August 2016 round in order to keep the quality of our services. Sign up below to receive emails and notifications regarding future cohorts and events from TECHRISE!</p>
- -->
+                        <!-- <h2 class="title text-center">Preregister for August 2016 Enrollment</h2>  
+                        <p class="intro text-center">We are currently accepting applications for 20 highly motivated students to join TECHRISE starting August 2016, completely free of charge. Please fill out the form below to sign up for preregistration.</p>   -->   
+                        <h2 class="title text-center">Preregister for Future Cohorts</h2>
+                        <p class="text-center">Thank you for your interest! Unfortunately, we have received many applications in a short period of time and have decided to close it for the August 2016 round in order to keep the quality of our services. Sign up below to receive emails and notifications regarding future cohorts and events from TECHRISE!</p>
+
                         <div class="row">
 
-                            <%= render 'mailchimp' %>
+                            <%= render 'future_cohorts' %>
 
                             
                         </div><!--//row-->
