--- a/app/views/application/_lesson_nav_section.html.erb
+++ b/app/views/application/_lesson_nav_section.html.erb
@@ -16,7 +16,7 @@
     <% end %>
   <% end %>
 
-  <button id="completed_button" class="btn btn-success"> <i class="fa fa-check-circle" aria-hidden="true"></i> Completed!</button>
+  <button id="completed_button" class="btn btn-default"> <i class="fa fa-check-circle" aria-hidden="true"></i> Completed!</button>
 
   <br>
 
