--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,11 @@
+
+
+.lesson_well {
+  background-color: #f5f5f5;
+  padding: 10px;
+  min-height: 20px;
+}
+
 .course_html {
   background: #eeeeee;
 }
