--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -1,6 +1,58 @@
 <div class="row">
+	<div class="col-xs-12">
+		<% if @last_lesson %>
 
-	<div class="row">
+			<% lesson_name = Tags::LESSONS[@last_lesson.parameters[:course_name].underscore + "s"].keys[@last_lesson.parameters[:lesson_id].to_i - 1][1] %>
+			
+			<div class="panel">
+				<div class="panel-body text-center">
+					<div class="row">
+						<div class="col-xs-12 col-md-6 col-md-offset-3">
+							<h3 style="margin-bottom: 40px; text-decoration: underline;">Current Course in Progress</h3>
+
+							<div class="row">
+								<div class="col-xs-4">
+									<div class="lesson_well">
+										<small>Lesson <%= @last_lesson.parameters[:lesson_id] %></small>
+										<h4 style="margin-top: 0px;"><%= @last_lesson.parameters[:course_name].split(/(?=[A-Z])/).join(" ").chomp("Lesson") %></h4>
+									</div>
+								</div>
+
+								<div class="col-xs-8">
+										<h3 style="text-align: left;"><%= lesson_name %></h3>
+								</div>
+							</div><!-- row -->
+
+
+							<div class="row">
+					      <div class="col-xs-12">
+					        <div class="progress_bar" style="border-top: none;">
+					          <div class="progress">
+					            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="<%= progress(@last_lesson.parameters[:course_name]) %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= progress(@last_lesson.parameters[:course_name]) %>%; min-width: 2em;">
+					              <%= progress(@last_lesson.parameters[:course_name]) %>% completed
+					            </div>
+					          </div>
+					        </div><!-- progress_bar -->
+					      </div><!-- col-xs-12 -->
+					    </div><!-- row -->
+
+
+							<div class="row" style="margin-top:20px;">
+								<div class="col-xs-12">
+									<h3><%= link_to 'Continue Lesson <i class="fa fa-caret-right" style="margin-left: 5px;" aria-hidden="true"></i>'.html_safe, '/' + @last_lesson.parameters[:course_name].underscore + "s/" + @last_lesson.parameters[:lesson_id], class: 'btn btn-danger' %></h3>
+								</div>
+							</div><!-- row -->
+						</div><!-- col-xs-12 col-md-6 col-md-offset-3 -->
+					</div><!-- row -->
+
+				</div><!-- panel-body -->
+			</div><!-- panel -->
+		<% end %>
+	</div><!-- col-xs-12 -->
+</div><!-- row -->
+
+<div class="row">
+
 		<div class="col-xs-12 col-md-6">
 
 			<div class="panel">
@@ -23,15 +75,6 @@
 					
 				</div><!-- panel-heading-stats -->
 			</div><!-- panel -->
-
-			<% if @last_lesson %>
-				<div class="panel">
-					<div class="panel-body text-center">
-							<h3><%= link_to '<i class="fa fa-graduation-cap" aria-hidden="true"></i> Go to recently completed lesson'.html_safe, '/' + @last_lesson.parameters[:course_name].underscore + "s/" + @last_lesson.parameters[:lesson_id] %></h3>
-					</div>
-				</div>
-			<% end %>
-
 		</div><!-- col-xs-12 col-md-4 -->
 
 		<div class="col-xs-12 col-md-6">
@@ -44,7 +87,6 @@
 				</blockquote>
 			</div>
 		</div>
-	</div>
 
 </div>
 
