--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -11,15 +11,15 @@
 							<h3 style="margin-bottom: 40px; text-decoration: underline;">Current Course in Progress</h3>
 
 							<div class="row">
-								<div class="col-xs-4">
+								<div class="col-sm-4 col-xs-12">
 									<div class="lesson_well">
 										<small>Lesson <%= @last_lesson.parameters[:lesson_id] %></small>
 										<h4 style="margin-top: 0px;"><%= @last_lesson.parameters[:course_name].split(/(?=[A-Z])/).join(" ").chomp("Lesson") %></h4>
 									</div>
 								</div>
 
-								<div class="col-xs-8">
-										<h3 style="text-align: left;"><%= lesson_name %></h3>
+								<div class="col-sm-8 col-xs-12">
+										<h3 style="text-align: left;"><i class="fa fa-code" style="color: #f29a8b;" aria-hidden="true"></i> <%= lesson_name %></h3>
 								</div>
 							</div><!-- row -->
 
@@ -28,7 +28,7 @@
 					      <div class="col-xs-12">
 					        <div class="progress_bar" style="border-top: none;">
 					          <div class="progress">
-					            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="<%= progress(@last_lesson.parameters[:course_name]) %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= progress(@last_lesson.parameters[:course_name]) %>%; min-width: 2em;">
+					            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="<%= progress(@last_lesson.parameters[:course_name]) %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= progress(@last_lesson.parameters[:course_name]) %>%; min-width: 4em;">
 					              <%= progress(@last_lesson.parameters[:course_name]) %>% completed
 					            </div>
 					          </div>
