--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -57,7 +57,7 @@
 
 			<div class="panel">
 				<div class="panel-heading-stats">
-					<h3>Your Stats</h3>
+					<h3><i class="fa fa-bar-chart" aria-hidden="true"></i> Your Stats</h3>
 				</div>
 				<div class="panel-body">
 					<h5 class="pull-right">View your <%= link_to 'Activity Log', activity_log_path %></h5>
