add sound effects

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -64,7 +64,7 @@
 
 #completed_button {
   display: none;
-  margin: 20px;
+  margin-bottom: 20px;
 }
 
 .prof_pic_xs {
@@ -184,9 +184,6 @@ pre {
 }
 
 .course_button {
-	// position: absolute;
- //  bottom: 20px;
- //  right: 10px;
   float: right;
 }
 
