--- a/app/views/progressions/create.js.erb
+++ b/app/views/progressions/create.js.erb
@@ -39,3 +39,8 @@ ready = function() {
 
 $(document).ready(ready);
 $(document).on('page:load', ready);
+
+var audio = new Audio('/sounds/OK.wav');
+audio.play();
+
+
