add sound effects

--- a/app/views/cards/create.js.erb
+++ b/app/views/cards/create.js.erb
@@ -4,3 +4,6 @@ $("#card_answer").val('');
 
 // hide flashcard form
 $('#slider').slideReveal("toggle");
+
+var audio = new Audio('/sounds/OK.wav');
+audio.play();
