--- a/app/views/ideator_lessons/lessons/lesson_12.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_12.html.erb
@@ -172,7 +172,7 @@ gem 'simple_form'
 </code></pre>
 
 <p>
-  Then run the following command to install it:
+  Then run the following command in the terminal to install it:
 </p>
 
 <pre><code class="bash">
