--- a/app/views/ideator_lessons/lessons/lesson_16.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_16.html.erb
@@ -41,7 +41,7 @@ end
       </p>
 
       <p>
-        Let's take the <code>index</code> action for example. If we look at <code>rake routes</code> and look at the right most column, we see <code>ideas#index</code>. If we look all the way to the right on that row, we see the <code>prefix</code> of <code>ideas</code>. Therefore the <code>link_to</code> in this case would look something like this:
+        Let's take the <code>index</code> action for example. If we look at <code>rake routes</code> and look at the right most column, we see <code>ideas#index</code>. If we look all the way to the left on that row, we see the <code>prefix</code> of <code>ideas</code>. Therefore the <code>link_to</code> in this case would look something like this:
       </p>
 
 <pre><code class="erb">
@@ -98,7 +98,7 @@ end
 </code></pre>
 
 <p>
-  Save the file and refresh the page. We now have a working delete button. Now let's just add some design by giving it some bootstrap buttons and then pulling it all the way to the left:
+  Save the file and refresh the page. We now have a working delete button. Now let's just add some design by giving it some bootstrap buttons and then pulling it all the way to the right:
 </p>
 
 <pre><code class = "erb">
