--- a/app/views/ideator_lessons/lessons/lesson_17.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_17.html.erb
@@ -33,7 +33,7 @@ get 'random' =&gt; 'ideas#random'
 </p>
 
 <p>
-  Now that we've set up these routes, let's go into our controller and set up the view for these two routes.
+  Now that we've set up these routes, let's go into our controller and set up the view for these two routes in the next lesson.
 </p>
 
 <p>
