--- a/app/views/ideator_lessons/lessons/lesson_19.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_19.html.erb
@@ -111,7 +111,7 @@ end
   &lt;/div&gt;
 &lt;% else %&gt;
   
-  &lt;h4&gt;No ideas have been shared. Add one &lt;%= link_to 'here' root_path %&gt;&lt;/h4&gt;
+  &lt;h4&gt;No ideas have been shared. Add one &lt;%= link_to 'here', root_path %&gt;&lt;/h4&gt;
 
 &lt;% end %&gt;
 </code></pre>
