--- a/app/views/ideator_lessons/lessons/lesson_4.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_4.html.erb
@@ -60,7 +60,7 @@ end
 </p>
 
 <p>
-	Inside this file, let’s uncomment <code>root 'welcome#index'</code> and instead replace it with <code>root ‘ideas#index’</code>.
+	Inside this file, let’s delete <code>root 'welcome#index'</code> and instead replace it with <code>root ‘ideas#index’</code>.
 </p>
 
 <p>
@@ -84,7 +84,7 @@ end
 </div>
 
 <p>
-	Let’s now commit this to GitHub.
+	Let’s now commit this to GitHub. Committing to Github is another way of saying, uploading our code up to Github.
 </p>
 
 <p>We’re first going to add all the files that we just updated:</p>
