--- a/app/views/ideator_lessons/lessons/lesson_5.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_5.html.erb
@@ -33,7 +33,7 @@ bundle install
 
 <div class="well">
   <h3>How to restart the server</h3>
-  <p>To restart the server, first hit <code>Command + C</code> to stop the server. Then to start the server again, hit the up arrow and press enter, or type in <code>rails server</code> again.</p>
+  <p>To restart the server, first hit <code>Control + C</code> to stop the server. Then to start the server again, hit the up arrow and press enter, or type in <code>rails server</code> again.</p>
 </div>
 
 <p>Awesome. Next, it’s telling us to rename <code>application.css</code> to <code>application.scss</code>. We could manually rename it, but the documentation also gives us a simple command that we can run in the console that does just this.</p>
@@ -42,7 +42,7 @@ bundle install
 mv app/assets/stylesheets/application.css app/assets/stylesheets/application.scss
 </code></pre>
 
-<p>Let’s run that command to rename the file.</p>
+<p>Let’s run the command above to rename the file.</p>
 
 <p>Now inside <code>application.scss</code>, let’s copy and paste the following code like this:</p>
 
