--- a/app/views/ideator_lessons/lessons/lesson_8.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_8.html.erb
@@ -38,7 +38,7 @@ body {
 </code></pre>
 
 <p>
-  Then what we're going to do is wrap all of our content in a div with an <code>id</code> of <code>wrap</code>. So right before the code for the navbar begins (right after the opening <code>body</code> tag and right before the opening nav), let's add <code>&lt;div id = "wrap"&gt;</code> and close the <code>div</code> right before the closing <code>body</code> tag.
+  Then what we're going to do is wrap all of our content in a div with an <code>id</code> of <code>wrap</code> in <code>application.html.erb</code>. So right before the code for the navbar begins (right after the opening <code>body</code> tag and right before the opening nav), let's add <code>&lt;div id = "wrap"&gt;</code> and close the <code>div</code> right before the closing <code>body</code> tag.
 </p>
 
 <p>
