--- a/app/views/ideator_lessons/lessons/lesson_9.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_9.html.erb
@@ -70,7 +70,7 @@ end
 </p>
 
 <p>
-  Now that we have edited our migration file, we have to tell rails to migrate these columns. Run the following command:
+  Now that we have edited our migration file, we have to tell rails to migrate these columns. Type in the following command in the terminal and press enter:
 </p>
 
 <pre><code class="bash">
@@ -88,7 +88,7 @@ rake db:migrate
 </div>
 
 <p>
-  As a rule of thumb, every time you run a migration, you should restart your server. So let's go ahead and restart our server (<code>Command + C</code> to stop the server and <code>rails s</code> to start the server again).
+  As a rule of thumb, every time you run a migration, you should restart your server. So let's go ahead and restart our server (<code>Control + C</code> to stop the server and <code>rails s</code> to start the server again).
 </p>
 
 <p>
