--- a/app/views/ideator_lessons/lessons/lesson_20.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_20.html.erb
@@ -21,7 +21,7 @@ gem 'will_paginate', '~> 3.0.6'
 </code></pre>
 
 <p>
-  Let's go ahead and add that into your Gemfile, then run <code>bundle install</code> in the command line to install it. After we do that, what should we do?
+  Let's go ahead and add that into your Gemfile, then run <code>bundle install</code> in the terminal to install it. After we do that, what should we do?
 </p>
 
 <%= render partial: '/shared/quizzes', locals: { question: 'Show me the answer!', answer: "Restart the server ;)", number: 1 } %>
