--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,4 +1,6 @@
-
+span.radio.inline {
+  margin-right: 15px;
+}
 
 .lesson_well {
   background-color: #f5f5f5;
@@ -103,6 +105,10 @@
 
 .lesson_content {
   background-color: white;
+  h1 {
+    border-left: 6px solid #ec6952;
+    padding-left: 10px;
+  }
 }
 
 .item .content p {
