--- a/app/views/cards/create.js.erb
+++ b/app/views/cards/create.js.erb
@@ -1,6 +1,7 @@
 // empty flashcard form
 $("#card_question").val('');
 $("#card_answer").val('');
+$("#card_tag_list").val('');
 
 
 var audio = new Audio('/sounds/OK.wav');
