--- a/app/views/cards/_widget.html.erb
+++ b/app/views/cards/_widget.html.erb
@@ -6,6 +6,7 @@
   <%= simple_form_for Card.new, url: cards_path, method: :post, html: {style: 'margin-top: 20px;'}, remote: true do |f| %>
     <%= f.input :question, placeholder: 'Write your flashcard question here', input_html: {rows: 5} %>
     <%= f.input :answer, placeholder: 'Write your flashcard answer here', input_html: {rows: 5} %>
+    <%= f.input :tag_list, label: 'Related Tags', placeholder: 'Separate tags with single comma ","', input_html: {rows: 2} %>
     <%= f.submit class: 'btn btn-primary' %>
   <% end %>
 </div>
