--- a/app/views/cards/_widget.html.erb
+++ b/app/views/cards/_widget.html.erb
@@ -7,6 +7,7 @@
     <%= f.input :question, placeholder: 'Write your flashcard question here', input_html: {rows: 5} %>
     <%= f.input :answer, placeholder: 'Write your flashcard answer here', input_html: {rows: 5} %>
     <%= f.input :tag_list, label: 'Related Tags', placeholder: 'Separate tags with single comma ","', input_html: {rows: 2} %>
+    <%= f.input :lesson_url, as: :hidden, input_html: {value: request.original_url} %>
     <%= f.submit class: 'btn btn-primary' %>
   <% end %>
 </div>
