--- a/app/views/cards/create.js.erb
+++ b/app/views/cards/create.js.erb
@@ -3,6 +3,12 @@ $("#card_question").val('');
 $("#card_answer").val('');
 $("#card_tag_list").val('');
 
+<% @cards = current_user.cards.where(repetition_date: nil) %>
+<% @cards += current_user.cards.today %>
+
+$('#header').html("<%= escape_javascript render partial: '/layouts/nav_contents', locals: { :@cards => @cards } %>")
+
+
 
 var audio = new Audio('/sounds/OK.wav');
 audio.play();
