--- a/app/views/layouts/study.html.erb
+++ b/app/views/layouts/study.html.erb
@@ -11,19 +11,18 @@
 </head>
 
 <body>
-        <!-- ******HEADER****** -->
-        <header class="header">  
-            <div class="container">       
-                <h1 class="logo" style="padding-top: 13px; float:none;">
-                    <a href="/"><span class="text" style="font-size: 40px;color: #EC6952;font-family:'Titillium Web', sans-serif;">TECHRISE</span></a>
-                </h1><!--//logo-->     
-                                     
-            </div><!--//container-->
-        </header><!--//header-->
+  <!-- ******HEADER****** -->
+  <header class="header">  
+      <div class="container">       
+          <h1 class="logo" style="padding-top: 13px; float:none;">
+              <a href="/"><span class="text" style="font-size: 40px;color: #EC6952;font-family:'Titillium Web', sans-serif;">TECHRISE</span></a>
+          </h1><!--//logo-->     
+                               
+      </div><!--//container-->
+  </header><!--//header-->
 
-        <%= yield %>
-                            
-
+  <%= yield %>
   
+  <%= render '/layouts/audio' %>    
 </body>
 </html>
