--- a/app/views/cards/update_interval.js.erb
+++ b/app/views/cards/update_interval.js.erb
@@ -2,7 +2,7 @@
 <% @cards += current_user.cards.today %>
 
 <% if @cards.empty? %>
-  completed.play();
+  completed_sound.play();
 <% else %>
   success_sound.play();
 <% end %>
