change call to action

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -13,9 +13,9 @@
     <div class="container text-center">                
         <h1 class="title">Coding Bootcamp in Nepal<br/>Become a web developer in 3 months</h2>
         <p class="intro">
-          We are currently accepting applications for 20 highly motivated students to join TECHRISE starting August 2016, completely free of charge.
+          We are currently accepting applications for highly motivated students to join TECHRISE in future cohorts.
         </p>
-        <p><a class="btn btn-cta btn-cta-primary" href="/preregistration">Sign Up for Pre-Screening</a></p>
+        <p><a class="btn btn-cta btn-cta-primary" href="/preregistration">Sign Up for Future Cohorts</a></p>
     </div><!--//container-->
 </section><!--//promo-->
 
@@ -310,10 +310,7 @@
   <!-- ******CTA Section****** -->
   <section id="cta-section" class="section cta-section text-center home-cta-section">
       <div class="container">
-         <h2 class="title">Ready to start coding with TECHRISE?</h2>
-         <p class="intro">We are currently accepting applications for 20 highly motivated students to join TECHRISE starting August 2016, <span class="counting">completely free of charge</span>.</p>
-         <!-- <p class="intro">Sign up to get <span class="counting">instant access</span> to course materials and a personal mentor.</p> -->
-         <p><a class="btn btn-cta btn-cta-primary" href="/preregistration" target="_blank">Sign Up Now</a></p>
+        <%= render partial: 'cta_content' %>
       </div><!--//container-->
   </section><!--//cta-section-->
 
