--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -70,9 +70,7 @@
 <!-- ******CTA Section****** -->
 <section id="cta-section" class="section cta-section text-center contact-cta-section">
     <div class="container">
-       <h2 class="title">Ready to start coding with Techrise?</h2>
-         <p class="intro">We are currently accepting applications for 20 highly motivated students to join TECHRISE starting August 2016, <span class="counting">completely free of charge</span>.</p>
-         <p><a class="btn btn-cta btn-cta-primary" href="/preregistration" target="_blank">Sign Up Now</a></p>
+       <%= render partial: 'cta_content' %>
     </div><!--//container-->
 </section><!--//cta-section-->
 
