--- a/app/views/static_pages/learn.html.erb
+++ b/app/views/static_pages/learn.html.erb
@@ -157,7 +157,7 @@
         <div class="row">
              <div class="step text-center col-md-4 col-sm-4 col-xs-12">
                  <h3 class="title"><span class="number">1</span><br /><span class="text">Sign up for Prescreening</span></h3>
-                 <p>We are currently accepting applications for 20 highly motivated students to join TECHRISE, completely free of charge. If you are interested, please sign up below.</p>
+                 <p>We are currently accepting applications for highly motivated students to join TECHRISE. If you are interested, please sign up below.</p>
              </div><!--//step-->
              <div class="step text-center col-md-4 col-sm-4 col-xs-12">
                  <h3 class="title"><span class="number">2</span><br /><span class="text">Complete Prework</span></h3>
@@ -169,7 +169,7 @@
              </div><!--//step-->
         </div><!--//row-->
         
-        <div class="text-center"><a class="btn btn-cta btn-cta-primary" href="/preregistration">Sign Up to Enroll for Free</a></div>
+        <div class="text-center"><a class="btn btn-cta btn-cta-primary" href="/preregistration">Sign Up to Enroll in Future TECHRISE Cohorts</a></div>
         
     </div><!--//container-->        
 </section><!--//steps-->
