--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -222,6 +222,7 @@
               <ol class="carousel-indicators">
                   <li data-target="#testimonials-carousel" data-slide-to="0" class="active"></li>
                   <li data-target="#testimonials-carousel" data-slide-to="1"></li>
+                  <li data-target="#testimonials-carousel" data-slide-to="2"></li>
               </ol><!--//carousel-indicators-->
               <div class="carousel-inner">
 
@@ -244,12 +245,25 @@
                           <blockquote>
                           <i class="fa fa-quote-left"></i>
                           <p>
-                            <strong>I was lost and was trying many courses on the internet.</strong> After joining Techrise, I got courses of my preference and suitable to the current market. <strong>Weekly mentor sessions, well presented, tested and clearly explained lessons and assignments' reviews were the best part learning here.</strong> Asking a lot of questions to my mentor, and discussing with other members in Slack enhanced fast understanding. Thank you TECHRISE for helping me build skills to make great apps.
+                            <strong>I was lost and was trying many courses on the internet.</strong> After joining TECHRISE, I got courses of my preference and suitable to the current market. <strong>Weekly mentor sessions, well presented, tested and clearly explained lessons and assignments' reviews were the best part learning here.</strong> Asking a lot of questions to my mentor, and discussing with other members in Slack enhanced fast understanding. Thank you TECHRISE for helping me build skills to make great apps.
                           </p>
                           </blockquote>
                           <p class="source">Lakshman Basnet<br /><span class="title">Computer & Information Sciences Student at Tribhuvan University</span></p>
                       </div><!--//content-->                         
-                  </div><!--//item-->                         
+                  </div><!--//item-->     
+
+                  <div class="item">
+                      <figure class="profile"><%= image_tag 'landing_page/sandeep.jpg' %></figure>
+                      <div class="content">
+                          <blockquote>
+                          <i class="fa fa-quote-left"></i>
+                          <p>
+                            I was not so good at coding and was unknown what to do so I can move with the flow of current world but after joining TECHRISE, I am good at coding and able to choose the right field to set my career. Thank you TECHRISE for providing guidance to build up my skill and confidence through lessons, weekly mentor section and assignments.
+                          </p>
+                          </blockquote>
+                          <p class="source">Sandeep Poudel<br /><span class="title">BSc. at CSIT</span></p>
+                      </div><!--//content-->                         
+                  </div><!--//item-->                       
                   
               </div><!--//carousel-inner-->
               
