add ruby fund video

--- a/app/views/ruby_lessons/lessons/lesson_2.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_2.html.erb
@@ -1,5 +1,10 @@
 <h1><%= title_for(RubyLesson, 1, 2) %></h1>
 
+<!-- 16:9 aspect ratio -->
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe src="https://player.vimeo.com/video/172834768" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
+
 <p>
   The first resource that you will go through is <a href="https://www.codecademy.com/learn/ruby" target="_blank">Codecademy's Ruby Tutorials</a>. They do a great job in laying out the fundamentals and providing you with exercises so you can apply them quickly.
 </p>
