--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-xs-12">
+	<div class="col-xs-12 col-md-6">
 		<% if @last_lesson %>
 
 			<% lesson_name = Tags::LESSONS[@last_lesson.parameters[:course_name].underscore + "s"].keys[@last_lesson.parameters[:lesson_id].to_i - 1][1] %>
@@ -7,7 +7,7 @@
 			<div class="panel">
 				<div class="panel-body text-center">
 					<div class="row">
-						<div class="col-xs-12 col-md-6 col-md-offset-3">
+						<div class="col-xs-12">
 							<h3 style="margin-bottom: 40px; text-decoration: underline;">Current Course in Progress</h3>
 
 							<div class="row">
@@ -48,47 +48,40 @@
 				</div><!-- panel-body -->
 			</div><!-- panel -->
 		<% end %>
-	</div><!-- col-xs-12 -->
-</div><!-- row -->
 
-<div class="row">
-
-		<div class="col-xs-12 col-md-6">
-
-			<div class="panel">
-				<div class="panel-heading-stats">
-					<h3><i class="fa fa-bar-chart" aria-hidden="true"></i> Your Stats</h3>
-				</div>
-				<div class="panel-body">
-					<h5 class="pull-right">View your <%= link_to 'Activity Log', activity_log_path %></h5>
-					
-					<h4><strong>Today</strong></h4>
-					<ul class="unindented_ul">
-						<li><small><i class="fa fa-check" aria-hidden="true"></i> <%= @lessons.where("created_at >= ?", Time.zone.now.beginning_of_day).count %></small> Lessons Completed</li>
-						<li><small><i class="fa fa-pencil" aria-hidden="true"></i> <%= @flashcards.where("created_at >= ?", Time.zone.now.beginning_of_day).count %></small> Flashcards Completed</li>
-					</ul>
-					<h4><strong>This Week</strong></h4>
-					<ul class="unindented_ul">
-						<li><small><i class="fa fa-check" aria-hidden="true"></i> <%= @lessons.where("created_at >= ?", 1.week.ago).count %></small> Lessons Completed</li>
-						<li><small><i class="fa fa-pencil" aria-hidden="true"></i> <%= @flashcards.where("created_at >= ?", 1.week.ago).count %></small> Flashcards Completed</li>
-					</ul>
-					
-				</div><!-- panel-heading-stats -->
-			</div><!-- panel -->
-		</div><!-- col-xs-12 col-md-4 -->
-
-		<div class="col-xs-12 col-md-6">
-			<div class="devise_box">
-				<%= image_tag current_user.avatar, class: 'prof_pic_sm' %>
-				<h3>You have <%= pluralize(@cards.count, 'card') %> to review today - <%= link_to 'Study Flashcards', study_path %></h3>
-				<blockquote>
-					<%= Quote::ARRAY.sample[0] %>
-					<small><%= Quote::ARRAY.sample[1] %></small>
-				</blockquote>
+		<div class="panel">
+			<div class="panel-heading-stats">
+				<h3><i class="fa fa-bar-chart" aria-hidden="true"></i> Your Stats</h3>
 			</div>
-		</div>
+			<div class="panel-body">
+				<h5 class="pull-right">View your <%= link_to 'Activity Log', activity_log_path %></h5>
+				
+				<h4><strong>Today</strong></h4>
+				<ul class="unindented_ul">
+					<li><small><i class="fa fa-check" aria-hidden="true"></i> <%= @lessons.where("created_at >= ?", Time.zone.now.beginning_of_day).count %></small> Lessons Completed</li>
+					<li><small><i class="fa fa-pencil" aria-hidden="true"></i> <%= @flashcards.where("created_at >= ?", Time.zone.now.beginning_of_day).count %></small> Flashcards Completed</li>
+				</ul>
+				<h4><strong>This Week</strong></h4>
+				<ul class="unindented_ul">
+					<li><small><i class="fa fa-check" aria-hidden="true"></i> <%= @lessons.where("created_at >= ?", 1.week.ago).count %></small> Lessons Completed</li>
+					<li><small><i class="fa fa-pencil" aria-hidden="true"></i> <%= @flashcards.where("created_at >= ?", 1.week.ago).count %></small> Flashcards Completed</li>
+				</ul>
+				
+			</div><!-- panel-heading-stats -->
+		</div><!-- panel -->
+	</div><!-- col-xs-12 col-md-4 -->
 
-</div>
+	<div class="col-xs-12 col-md-6">
+		<div class="devise_box">
+			<%= image_tag current_user.avatar, class: 'prof_pic_sm' %>
+			<h3>You have <%= pluralize(@cards.count, 'card') %> to review today - <%= link_to 'Study Flashcards', study_path %></h3>
+			<blockquote>
+				<%= Quote::ARRAY.sample[0] %>
+				<small><%= Quote::ARRAY.sample[1] %></small>
+			</blockquote>
+		</div><!-- devise_box -->
+	</div><!-- col-xs-12 col-md-6 -->
+</div><!-- row -->
 
 <div class = "row">
 
