--- a/app/views/html_css_lessons/lessons/lesson_14.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_14.html.erb
@@ -1,40 +1,8 @@
 <h1><%= title_for(HtmlCssLesson, 4, 1) %></h1>
 
-<p>
-  <strong>This is your final challenge for the HTML/CSS course.</strong>
-</p>
+<!-- 16:9 aspect ratio -->
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe src="https://player.vimeo.com/video/172844379" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
 
-<h3>MISSION: MOCK THE LAYOUT OF YOUR FAVORITE WEBSITE</h3>
-
-<p>
-  Find a website that you like and try to <strong>imitate the layout of the website using HTML and CSS</strong>. Utilize what you learned with Bootstrap and its grid system to imitate the look.
-</p>
-
-<p>
-  <strong>Don't try to make everything look perfectly the same</strong>. Instead, focus on getting the basic layout right. Don't worry too much about the text inside it or the banners or images that the site might have. Just try to imitate the color and basic layout.
-</p>
-
-<p>
-  Also, don't choose websites that are super complex! Choose a simple website. The point here is to <strong>apply what you have learned in the previous lessons</strong>, not to make a super fancy looking website :)
-</p>
-
-<p>
-  Once you've finished this assignment, upload these 3 things: 
-  <ol>
-    <li>Link to gist containing your code</li>
-    <li>Link to your uploaded website</li>
-    <li>Link to original website</li>
-  </ol>
-  We'll give you feedback once you have submitted your website.
-</p>
-
-<p>
-  <strong>Good luck on this final challenge!!</strong>
-</p>
-
-
-<br>
-
-<br class = "clear">
-
-<% @submissions = true %>
+<% @submissions = false %>
