add uncompleted form

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,11 @@
+#hidden_delete_progression_form {
+  display: none;
+}
+
+#hidden_progression_form {
+  display: none;
+}
+
 span.radio.inline {
   margin-right: 15px;
 }
