--- a/app/views/application/_lesson_nav_section.html.erb
+++ b/app/views/application/_lesson_nav_section.html.erb
@@ -11,7 +11,14 @@
   <% end %>
 
   <% if current_user.progressions.where(course_name: controller_name.classify.constantize, lesson_id: params[:id]).count > 0 %>
-    <button class="btn btn-success" style="margin: 20px;"> <i class="fa fa-check-circle" aria-hidden="true"></i> Completed!</button>
+    <%= simple_form_for :progression, url: progression_path, html: {id: 'delete_progression_form'}, method: :delete, remote: true do |f| %>
+      <%= f.input :lesson_id, as: :hidden, input_html: { value: params[:id] } %>
+      <%= f.input :course_name, as: :hidden, input_html: { value: controller_name.classify.constantize } %>
+
+      <%= button_tag(type: 'submit', class: "btn btn-success", id: "progression_form_button") do %>
+        <i class="fa fa-check-circle" aria-hidden="true"></i> Mark as Uncompleted
+      <% end %>
+    <% end %>
   <% else %>
     <%= simple_form_for :progression, url: progressions_path, html: {id: 'progression_form'}, method: :post, remote: true do |f| %>
       <%= f.input :lesson_id, as: :hidden, input_html: { value: params[:id] } %>
@@ -23,7 +30,25 @@
     <% end %>
   <% end %>
 
-  <button id="completed_button" class="btn btn-success"> <i class="fa fa-check-circle" aria-hidden="true"></i> Completed!</button>
+  <!-- hidden forms -->
+  <%= simple_form_for :progression, url: progression_path, html: {id: 'hidden_delete_progression_form'}, method: :delete, remote: true do |f| %>
+    <%= f.input :lesson_id, as: :hidden, input_html: { value: params[:id] } %>
+    <%= f.input :course_name, as: :hidden, input_html: { value: controller_name.classify.constantize } %>
+
+    <%= button_tag(type: 'submit', class: "btn btn-success", id: "progression_form_button") do %>
+      <i class="fa fa-check-circle" aria-hidden="true"></i> Mark as Uncompleted
+    <% end %>
+  <% end %>
+
+  <%= simple_form_for :progression, url: progressions_path, html: {id: 'hidden_progression_form'}, method: :post, remote: true do |f| %>
+    <%= f.input :lesson_id, as: :hidden, input_html: { value: params[:id] } %>
+    <%= f.input :course_name, as: :hidden, input_html: { value: controller_name.classify.constantize } %>
+
+    <%= button_tag(type: 'submit', class: "btn btn-warning", id: "progression_form_button") do %>
+      <i class="fa fa-check-circle" aria-hidden="true"></i> Mark as Completed
+    <% end %>
+  <% end %>
+  <!-- end -->
 
   <br>
 
