--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -8,6 +8,7 @@
 				<div class="panel-body text-center">
 					<div class="row">
 						<div class="col-xs-12">
+							<h5>Day <%= (DateTime.now.to_date - current_user.created_at.to_date).to_i %></h5>
 							<h3 style="margin-bottom: 40px; text-decoration: underline;">Current Course in Progress</h3>
 
 							<div class="row">
@@ -51,7 +52,7 @@
 
 		<div class="panel">
 			<div class="panel-heading-stats">
-				<h3><i class="fa fa-bar-chart" aria-hidden="true"></i> Your Stats</h3>
+				<h3><i class="fa fa-bar-chart" aria-hidden="true"></i> Your Stats</h3>				
 			</div>
 			<div class="panel-body">
 				<h5 class="pull-right">View your <%= link_to 'Activity Log', activity_log_path %></h5>
