add rspec and new layout

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -53,7 +53,17 @@ span.radio.inline {
 }
 
 .course_description {
-  height: 130px;
+  min-height: 220px;
+  a {
+    color: #333;
+  }
+  li {
+    border-bottom: 1px solid #e8e8e8;
+    padding: 5px 20px 20px;
+  }
+  li:hover {
+    background-color: whitesmoke;
+  }
 }
 
 .course_status {
@@ -183,7 +193,10 @@ pre {
 }
 
 .course_box {
-	height: 300px;
+	min-height: 300px;
+  padding: 20px;
+  padding-top: 0px;
+  margin-bottom: 10px;
   border: 1px solid whitesmoke;
   background: white;
   a:hover {
